--- a/app/views/scores/_form.html.erb
+++ b/app/views/scores/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= f.label :player_id %>
-    <%= f.text_field :player_id %>
+    <%= collection_select :score, :player_id, Player.all, :id, :name %>
   </div>
 
   <div class="actions">
