--- a/app/views/scores/show.html.erb
+++ b/app/views/scores/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Player:</strong>
-  <%= @score.player %>
+  <%= @score.player.name %>
 </p>
 
 <%= link_to 'Edit', edit_score_path(@score) %> |
