Add some routing and navigation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,9 @@
 
   <body>
     <%= yield %>
+    <p>
+      <%= link_to "Players", players_path %> | 
+      <%= link_to "Leaderboard", scores_path %>
+    </p>
   </body>
 </html>
